Make project compatible with JDK 8