@@ -114,7 +114,7 @@ public class DockerHelper {
         //The port never opened
         if (!quiet)
         {
-            logger.warn("Failed to connect to {}:{} after {} sec", hostname, port, timeout.toSeconds());
+            logger.warn("Failed to connect to {}:{} after {} sec", hostname, port, timeout.toMillis() / 1000);
         }
 
         return false;
@@ -226,7 +226,7 @@ public class DockerHelper {
 
     private Container searchContainer(String name) {
 
-        ListContainersCmd listContainersCmd = dockerClient.listContainersCmd().withStatusFilter(List.of("running"));
+        ListContainersCmd listContainersCmd = dockerClient.listContainersCmd().withStatusFilter(Arrays.asList("running"));
         listContainersCmd.getFilters().put("name", Arrays.asList(name));
         List<Container> runningContainers = null;
         try {
